# spectre

.github/workflows/: Tests.yaml
cmake/: AddInputFileTests.cmake  FindCharm.cmake  SetupCharm.cmake  SetupCharmAlgorithm.py  SetupClangTidy.cmake  SpectreAddCatchTests.cmake
doc_coverage/: index-sort-l.html  index.html
doc_coverage/ApparentHorizons/: ChangeCenterOfStrahlkorper.hpp.gcov.html  ComputeItems.hpp.gcov.html  FastFlow.hpp.gcov.html  SpherepackIterator.hpp.gcov.html  Strahlkorper.hpp.gcov.html  StrahlkorperGr.hpp.gcov.html  Tags.hpp.gcov.html  TagsDeclarations.hpp.gcov.html  TagsTypeAliases.hpp.gcov.html  YlmSpherepack.hpp.gcov.html  YlmSpherepackHelper.hpp.gcov.html  index-sort-l.html  index.html
doc_coverage/ControlSystem/: Averager.hpp.gcov.html  Controller.hpp.gcov.html  FunctionOfTimeUpdater.hpp.gcov.html  TimescaleTuner.hpp.gcov.html  index.html  (+1 more)
docs/: References.bib
src/Evolution/Executables/GeneralizedHarmonic/: CMakeLists.txt  EvolveGeneralizedHarmonic.hpp  EvolveGeneralizedHarmonicCce.hpp  EvolveGeneralizedHarmonicCceFwd.hpp  EvolveGeneralizedHarmonicFwd.hpp  GeneralizedHarmonicBase.hpp
src/Evolution/LoadBalancing/: CMakeLists.txt  DistributionStrategies.cpp  DistributionStrategies.hpp  LoadBalancingTestArray.hpp  StepTriggers.hpp  Tags.hpp
src/Evolution/LoadBalancing/Actions/: EmulateLoad.hpp  InitializeGraphDumpLabel.hpp  InitializeLoadBalancingTestArray.cpp  InitializeLoadBalancingTestArray.hpp  LoadBalancingTestCommunication.hpp  StepManagement.hpp  SyncForCheckpoint.hpp
src/Evolution/Systems/Cce/: BoundaryData.cpp  BoundaryData.cpp-old  BoundaryData.hpp  CMakeLists.txt  CceEvolve.cpp  CceEvolve.hpp  CharacteristicExtractor.hpp  CharacteristicScri.hpp  ComputePreSwshDerivatives.hpp  ComputeSwshDerivatives.hpp  Equations.cpp  Equations.hpp  GaugeTransformBoundaryData.hpp  InitializeCce.cpp  InitializeCce.hpp  InitializeCharacteristic.hpp  InitializeScri.hpp  InitializeWorldtubeBoundary.hpp  IntegrandInputSteps.hpp  LinearOperators.cpp  LinearOperators.hpp  LinearSolve.cpp  LinearSolve.hpp  NPTags.hpp  NpValues.cpp  NpValues.hpp  ObserveSwshModes.hpp  OptionTags.hpp  PreSwshDerivatives.hpp  PrecomputeCceDependencies.cpp  PrecomputeCceDependencies.hpp  ReadBoundaryDataH5.cpp  ReadBoundaryDataH5.hpp  ReceiveTags.hpp  RobinsonTrautman.hpp  ScriPlusInterpolationManager.hpp  ScriPlusValues.cpp  ScriPlusValues.hpp  SerialEvolveHelpers.cpp  SerialEvolveHelpers.hpp  (+8 more)
src/Evolution/Systems/Cce/Actions/: BoundaryComputeAndSendToEvolution.hpp  BroadcastNextTime.hpp  CalculateScriInputs.hpp  EnqueueInterpolationScriData.hpp  FilterSwshVolumeQuantity.hpp  InitializeCharacteristicEvolution.hpp  InitializeCharacteristicEvolutionScri.hpp  InitializeCharacteristicEvolutionTime.hpp  InitializeCharacteristicEvolutionVariables.hpp  InitializeFirstHypersurface.hpp  InitializeWorldtubeBoundary.hpp  InsertInterpolationScriData.hpp  ReceiveGHWorldtubeData.hpp  ReceiveGhWorldtubeData.hpp  ReceiveWorldtubeData.hpp  RequestBoundaryData.hpp  ScriObserveInterpolated.cpp  ScriObserveInterpolated.hpp  SendNextTimeToCce.hpp  TimeManagement.hpp  UpdateGauge.hpp
src/Evolution/Systems/Cce/AnalyticSolutions/: LinearizedBondiSachs.cpp  LinearizedBondiSachs.hpp
src/Evolution/Systems/Cce/Components/: CharacteristicEvolution.hpp  WorldtubeBoundary.hpp
src/Evolution/Systems/Cce/Initialize/: CMakeLists.txt  ConformalFactor.cpp  ConformalFactor.hpp  GeneratePsi0.cpp  GeneratePsi0.hpp  InitializeJ.cpp  InitializeJ.hpp  InitializeJCoordinatesForVolumeValue.cpp  InitializeJCoordinatesForVolumeValue.hpp  InverseCubic.cpp  InverseCubic.hpp  NoIncomingRadiation.cpp  NoIncomingRadiation.hpp  ZeroNonSmooth.cpp  ZeroNonSmooth.hpp
src/Evolution/Systems/Cce/InterfaceManagers/: GhInterfaceManager.hpp  GhInterpolationStrategies.hpp  GhLocalTimeStepping.cpp  GhLocalTimeStepping.hpp  GhLockstep.hpp
src/Executables/Cce/: CMakeLists.txt  Cce.cpp  WriteToH5.hpp
(+1988 files in other folders)
